statistics/prometheus.cc
@@ -23,6 +23,8 @@
 #include <daemon/stats.h>
 #include <folly/SynchronizedPtr.h>
 #include <logger/logger.h>
+#include <nlohmann/json.hpp>
+#include <platform/uuid.h>
 #include <prometheus/exposer.h>
 #include <gsl/gsl>
 #include <utility>
@@ -35,9 +37,9 @@ const std::string MetricServer::authRealm = "KV Prometheus Exporter";
 
 folly::SynchronizedPtr<std::unique_ptr<MetricServer>> instance;
 
-void initialize(const std::pair<in_port_t, sa_family_t>& config,
-                GetStatsCallback getStatsCB,
-                AuthCallback authCB) {
+nlohmann::json initialize(const std::pair<in_port_t, sa_family_t>& config,
+                          GetStatsCallback getStatsCB,
+                          AuthCallback authCB) {
     auto handle = instance.wlockPointer();
     // May be called at init or on config change.
     // If an instance already exists, destroy it before creating
@@ -48,11 +50,13 @@ void initialize(const std::pair<in_port_t, sa_family_t>& config,
     *handle = std::make_unique<MetricServer>(
             port, family, std::move(getStatsCB), std::move(authCB));
     if (!(*handle)->isAlive()) {
-        FATAL_ERROR(EXIT_FAILURE,
-                    fmt::format("Failed to start Prometheus exposer on "
-                                "family:{} port:{}",
-                                (family == AF_INET) ? "inet" : "inet6",
-                                port));
+        handle->reset();
+        auto message = fmt::format(
+                "Failed to start Prometheus "
+                "exposer on family:{} port:{}",
+                (family == AF_INET) ? "inet" : "inet6",
+                port);
+        throw std::runtime_error(message);
     }
 
     // if the configured port is set to 0, an available port number will have
@@ -61,6 +65,7 @@ void initialize(const std::pair<in_port_t, sa_family_t>& config,
     LOG_INFO("Prometheus Exporter started, listening on family:{} port:{}",
              (family == AF_INET) ? "inet" : "inet6",
              listeningPort);
+    return (*handle)->getRunningConfigAsJson();
 }
 
 void shutdown() {
@@ -74,6 +79,15 @@ std::pair<in_port_t, sa_family_t> getRunningConfig() {
         return {};
     }
     return handle->getRunningConfig();
+}
+
+nlohmann::json getRunningConfigAsJson() {
+    auto handle = instance.rlock();
+    if (!handle || !handle->isAlive()) {
+        // no MetricServer, or it is not listening
+        return {};
+    }
+    return handle->getRunningConfigAsJson();
 }
 
 class MetricServer::KVCollectable : public ::prometheus::Collectable {
@@ -119,7 +133,8 @@ MetricServer::MetricServer(in_port_t port,
                            AuthCallback authCB)
     : stats(std::make_shared<KVCollectable>(Cardinality::Low, getStatsCB)),
       statsHC(std::make_shared<KVCollectable>(Cardinality::High, getStatsCB)),
-      family(family) {
+      family(family),
+      uuid(::to_string(cb::uuid::random())) {
     try {
         /*
          * The connectionStr should meet the spec for civetweb's
@@ -145,7 +160,9 @@ MetricServer::MetricServer(in_port_t port,
         exposer->RegisterAuth(authCB, authRealm, lowCardinalityPath);
         exposer->RegisterAuth(authCB, authRealm, highCardinalityPath);
     } catch (const std::exception& e) {
-        LOG_ERROR("Failed start Prometheus Exposer: {}", e.what());
+        LOG_ERROR("Failed to start Prometheus Exposer: {}", e.what());
+        // Kill a partially initialized object
+        exposer.reset();
     }
 }
 
@@ -172,6 +189,21 @@ in_port_t MetricServer::getListeningPort() const {
 
 std::pair<in_port_t, sa_family_t> MetricServer::getRunningConfig() const {
     return {getListeningPort(), family};
+}
+
+nlohmann::json MetricServer::getRunningConfigAsJson() const {
+    nlohmann::json ret;
+    if (family == AF_INET) {
+        ret["host"] = "127.0.0.1";
+        ret["family"] = "inet";
+    } else {
+        ret["host"] = "::1";
+        ret["family"] = "inet6";
+    }
+    ret["port"] = getListeningPort();
+    ret["type"] = "prometheus";
+    ret["uuid"] = uuid;
+    return ret;
 }
 
 } // namespace cb::prometheus
